<resources>
    <string name="app_name">DigitalBank</string>

    <!-- Generic -->
    <string name="enter_your_email">Digite seu e-mail</string>
    <string name="enter_your_password">Digite sua senha</string>
    <string name="enter_your_name">Digite seu nome</string>
    <string name="enter_your_phone">Digite o número do seu telefone</string>
    <string name="confirm_your_password">Confirme sua senha</string>
    <string name="passwords_do_not_match">As senhas não correspondem.</string>
    <string name="error_generic">Ocorreu um erro, por favor tente mais tarde.</string>

    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="password_confirm">Confirmação de senha</string>

    <!-- LoginFragment -->
    <string name="enter">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="recover_account">Recuperar conta</string>

    <!-- RecoverFragment -->
    <string name="msg_recover_account">Informe o seu e-mail para enviarmos o link de alteração da senha.</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="send_email_success">E-mail enviado com sucesso.</string>

    <!-- RegisterFragment -->
    <string name="hint_password">Digite uma senha</string>
    <string name="hint_confirm_password">Confirme a senha</string>
    <string name="register">Cadastrar</string>


    <!-- Bottom Sheet -->
    <string name="title_bottom_sheet">Atenção</string>
    <string name="btn_bottom_sheet">Entendi</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email">Insira um e-mail válido.</string>
    <string name="invalid_password">Senha inválida, tente novamente.</string>
    <string name="email_in_use">Este e-mail já está em uso.</string>
    <string name="strong_password">Insira uma senha mais forte.</string>


</resources>