<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_default"
                    android:text="@string/create_account" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DBDBDB"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/color_default" />

            <EditText
                style="@style/Theme.EditText"
                android:id="@+id/edit_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_user_fill"
                android:drawablePadding="8dp"
                android:inputType="textPersonName"
                android:drawableTint="@color/color_default"
                android:hint="@string/enter_your_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/color_default" />

            <EditText
                style="@style/Theme.EditText"
                android:id="@+id/edit_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:drawableTint="@color/color_default"
                android:hint="@string/enter_your_email"
                android:paddingHorizontal="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textColor="@color/color_default" />

            <EditText
                style="@style/Theme.EditText"
                android:id="@+id/edit_phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_phone_fill"
                android:drawablePadding="8dp"
                android:inputType="phone"
                android:drawableTint="@color/color_default"
                android:hint="@string/enter_your_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textColor="@color/color_default" />

            <EditText
                style="@style/Theme.EditText"
                android:id="@+id/edit_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_padlock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:drawableTint="@color/color_default"
                android:hint="@string/hint_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_your_password"
                android:textColor="@color/color_default" />

            <EditText
                style="@style/Theme.EditText"
                android:id="@+id/edit_confirm_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_padlock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:drawableTint="@color/color_default"
                android:hint="@string/hint_confirm_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:text="@string/register"
                android:textAllCaps="true"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progress_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:indeterminateTint="@color/color_default" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
